--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "amazon-affiliate-api": "0.0.6",
+    "cors": "^2.8.5",
+    "cors-anywhere": "^0.4.1",
+    "cors-express": "^0.2.2",
+    "express": "^4.17.1",
     "jquery": "^3.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
